# assignments_uspto

./: .gitignore  CLAUDE.md  CPCmatching.md  GUIDE.md  PLAN.md  README.md  VERIFY.md  main.py  pyproject.toml  requirements.txt  run_ui.py  somecpc.txt  templateInfo.md
.claude/skills/verify/: SKILL.md
docs/: DATA_DICTIONARY.md  TEMPLATE_AUDIT.md  UI_PLAN.md
scripts/: train_classifier.py
src/uspto_assignments/: __init__.py  batch.py  classify.py  cli.py  conveyance.py  cpcconfig.py  cpcmatch.py  datasource.py  dictionary.py  exporters.py  filters.py  ledger.py  model.py  namemodel.py  naming.py  normalize.py  parser.py  propid.py  query.py  reference.py  resolution.py  tables.py  writers.py
src/uspto_assignments_ui/: __init__.py  __main__.py  app.py  help_content.py  main_window.py  settings.py  workers.py
src/uspto_assignments_ui/models/: __init__.py  arrow_table_model.py  entity_model.py
src/uspto_assignments_ui/resources/: metro.qss
src/uspto_assignments_ui/widgets/: __init__.py  batch_dialog.py  column_editor.py  cpc_settings_dialog.py  data_table.py  entity_dialog.py  export_dialog.py  field_tree.py  filter_bar.py  help_panel.py  landing.py  load_dialog.py  page.py  pager.py  preview_dialog.py  query_dialog.py  save_dialog.py  table_panel.py  tiles.py
templates/: 01_firm_to_firm_transactions_enriched.json  02_buyers_leaderboard_by_deals.json  03_buyers_leaderboard_by_patents.json  04_buyers_matched_entity_accurate.json  05_buyers_off_gazetteer_review.json  06_firm_to_firm_rules_only.json  07_cpc_patent_list_per_buyer.json  08_cpc_enrich_firm_to_firm.json  09_cpc_match_to_portfolio.json  10_dropped_sellers_audit.json  11_attach_cpc_from_file.json  12_convert_to_parquet.json  13_cpc_attach_offline.json  14_cpc_match_offline.json  TEMPLATES.md  buyer_identification_templates.json  buyer_identification_templates.reviewed.json  examples.json
tests/: conftest.py  test_batch.py  test_buyerid.py  test_classify.py  test_cli.py  test_cpc.py  test_exporters.py  test_filters.py  test_help_content.py  test_main.py  test_namemodel.py  test_naming.py  test_normalize.py  test_parse.py  test_query.py  test_reference.py  test_store.py  test_template_validation.py  test_ui.py  test_ui_batch.py  test_ui_cpc.py  test_ui_enhancements.py  test_ui_interactive.py  test_ui_lifecycle.py  test_ui_load.py
tests/fixtures/: buyer_sample.xml  sample_assignment.xml  seed_gazetteer.tsv
