[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-uspto"
version = "0.1.0"
description = "Parse USPTO patent-assignment XML/ZIP into normalized Parquet + Excel tables."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.0",       # fast, recoverable streaming XML parse
    "pyarrow>=15.0",   # Parquet / Arrow tables + memory-mapped interactive store
    "numpy>=1.26",     # view-index arrays for the interactive table model + batch helpers
    "openpyxl>=3.1",   # streaming (write_only) Excel output
    "rapidfuzz>=3",    # fast fuzzy matching for entity-name normalization
    "duckdb>=1.0",     # query layer over Arrow/Parquet (transaction ledger + leaderboards)
    # NOTE: probablepeople (the optional ML classify backend) is intentionally NOT here — it pulls
    # C-extension deps (python-crfsuite, doublemetaphone) that lack wheels for newer Pythons (e.g.
    # 3.14), so a hard dependency would break `pip install` on those. It lives in the `ml` extra
    # below; the rule-based classifier is the default and needs no compiled deps.
]

[project.optional-dependencies]
# Native desktop UI (Phase 3+). Core installs and runs headless without this.
ui = [
    "PyQt6>=6.6",
]
# Optional ML backend for entity-type classification. NOT installed by default, and it needs a
# C-extension: probablepeople depends on `python-crfsuite` (the CRF engine), whose newest release
# (0.9.12) ships wheels only up to CPython 3.12 — none for 3.13 or 3.14 on any platform. So:
#
#   * Python 3.12:    compiler-free. Install with the recipe below (the pure-Python `metaphone`
#                     shim in classify._install_doublemetaphone_shim removes probablepeople's OTHER
#                     C dep, `doublemetaphone`, so only python-crfsuite's cp312 wheel is needed):
#                         pip install python-crfsuite probableparsing Metaphone
#                         pip install --no-deps probablepeople
#   * Python 3.13/3.14:  python-crfsuite has NO wheel, so pip builds it from source and needs a C++
#                     compiler. There is no pure-Python CRF backend — use a Python 3.12 venv for ML,
#                     or just use the rule-based classifier (the default, needs no compiler).
#
# Prefer the two-command recipe above over `pip install ".[ml]"`: the extra pulls probablepeople's
# full dependency set, which includes the C `doublemetaphone` (may itself need building), whereas the
# `--no-deps` recipe installs only the wheels and lets the pure-Python `metaphone` shim stand in.
# Rules is the default and always works: classify falls back to rules (with a one-time note) whenever
# a step selects "probablepeople" but the backend can't load.
ml = [
    "probablepeople>=0.5",
    "python-crfsuite>=0.9.9",  # CRF engine — wheels only up to cp312; needs a compiler on 3.13/3.14
    "Metaphone>=0.6",  # pure-Python doublemetaphone stand-in — avoids probablepeople's other C dep
]
# Dev tooling + type stubs (the stubs are what let `pyright` strict pass on lxml/pyarrow).
dev = [
    "pytest",
    "pytest-qt",
    "ruff",
    "pyright",
    "lxml-stubs",
    "pyarrow-stubs",
]

[project.scripts]
uspto-assign = "uspto_assignments.cli:main"
uspto-assign-ui = "uspto_assignments_ui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uspto_assignments = ["resources/*.json.gz"]  # vendored built-in ML classifier weights
uspto_assignments_ui = ["resources/*.qss", "resources/*.svg"]

# NOTE: this project uses venv + pip (uv was not installed at scaffold time).
# Install editable with dev extras: .venv/bin/pip install -e ".[dev]"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify,
# PL pylint, RUF ruff-specific, N naming, C4 comprehensions, PTH use-pathlib.
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF", "N", "C4", "PTH"]
ignore = ["PLR2004"]
# Intentional Metro typography: × (remove chip) and – (range). Not confusable typos here.
allowed-confusables = ["×", "–"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]
# Qt's API is camelCase, and overriding virtuals (rowCount, headerData, setText, ...) must match.
"src/uspto_assignments_ui/**" = ["N802"]
# Dev-only offline training script (not shipped/imported): allow ML-conventional matrix names,
# relaxed line length, and a linear main(); it is excluded from pyright (see [tool.pyright] include).
"scripts/**" = ["N806", "E501", "B905", "PLW2901", "PLR0915", "PLC0415"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
include = ["src", "tests", "main.py"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

# PyQt6's signal/slot API is dynamically typed (every ``.connect(slot)`` is ``Unknown``), so the
# reportUnknown* family produces only noise in the Qt layer. Relax it there ONLY; the Qt-free core
# stays fully strict. Real errors (bad overrides, Optional access, arg types) still fire everywhere.
[[tool.pyright.executionEnvironments]]
root = "src/uspto_assignments_ui"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false

# UI tests simulate input by poking widget internals; allow protected access there only.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
pythonpath = ["src"]
filterwarnings = ["error"]
